# simd-ddm

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  calculation_critical_confinement_ratio_CCN37.nb  vcpkg-configuration.json  vcpkg.json
custom-overlay/fftw3/: portfile.cmake  vcpkg.json
custom-overlay/tinytiff/: portfile.cmake  usage  vcpkg.json
dev/: CMakeLists.txt  Makefile  app.cpp  app.hpp  ddm  main.cpp
dev/src/: main.cpp
dev/src/includes/: app.cpp  app.hpp  curve_fit.hpp  ddm.cpp  ddm.hpp  fitting.cpp  fitting.hpp  stack.cpp  stack.hpp  timer.hpp  utils.cpp  utils.hpp
dev/utils/: frame.cpp  frame.hpp  stack.cpp  stack.hpp
scripts/: FindFFTW.cmake
src/: main.cpp
src/includes/: app.cpp  app.hpp  curve_fit.cpp  curve_fit.hpp  ddm.cpp  ddm.hpp  ddm_diff.cpp  ddm_diff.hpp  ddm_loop.cpp  ddm_wk.cpp  ddm_wk.hpp  delays.cpp  delays.hpp  fit.cpp  fit.h  fit.hpp  fit_models.cpp  fit_models.hpp  fitting.hpp  stack.cpp  stack.hpp  timer.cpp  utils.cpp  utils.hpp
